ghc-4335c07/testsuite/tests/deriving/should_fail/T12163.hs
 {-# LANGUAGE DeriveFunctor #-}
 {-# LANGUAGE GADTs #-}

module T12163 where

data T a b where
     Mk :: Int -> b -> T Int b
     deriving (Functor)
