ghc-4335c07/testsuite/tests/deriving/should_fail/T12163.stderr

T12163.hs:8:16: error:
    • Can't make a derived instance of ‘Functor (T a)’:
        Constructor ‘Mk’ is a GADT
        Possible fix: use a standalone deriving declaration instead
    • In the data declaration for ‘T’
